--- a/index.html
+++ b/index.html
@@ -132,42 +132,7 @@
         </div>
     </section>
 
-    <script>
-        function ticketQuantityHandle(isIncrease,ticketType){
-            let economyCount = document.getElementById(ticketType+"-count");
-            let economyCountNum = parseInt(economyCount.value);
-            if(isIncrease == true){
-                economyCount.value = economyCountNum + 1;
-                calculateTotal();
-            }
-            else if(isIncrease == false && economyCountNum > 0){
-                economyCount.value = economyCountNum - 1;
-                calculateTotal();
-            }
-        }
-
-        function calculateTotal(){
-            const economyInput = document.getElementById("economy-count");
-            const economyCount = parseInt(economyInput.value);
-
-            const firstClassInput = document.getElementById("first-class-count");
-            const firstClassCount = parseInt(firstClassInput.value);
-            
-            const subTotal = economyCount * 100 + firstClassCount * 150;
-            document.getElementById("subtotal").innerText = subTotal;
-
-            const vat = (economyCount * 100 + firstClassCount * 150)*0.10;
-            document.getElementById("vat").innerText = vat;
-
-            const grandTotal = (economyCount * 100 + firstClassCount * 150)+((economyCount * 100 + firstClassCount * 150)*0.10);
-            document.getElementById("grand-total").innerText = grandTotal;
-            document.getElementById("price-alert").innerText = grandTotal;
-        }
-        document.getElementById("alright-button").addEventListener("click",function(){
-            location.reload();
-            return false;
-        })
-    </script>
+    <script src="app.js"></script>
 
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
